<resources>
    <string name="app_name">极客特购</string>

    <string-array name="reseaonType">
        <item>退货退款</item>
        <item>仅退款</item>
        <item>仅换货</item>

    </string-array>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_home_home">首页</string>
    <string name="tab_home_store">商城</string>
    <string name="tab_home_cart">购物车</string>
    <string name="tab_home_my">我的</string>

    <string name="finish">完成</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="refresh">刷新</string>
    <string name="reply">回复</string>

    <string name="label_total_price">合计:</string>
    <string name="text_select_all">" 全选"</string>
    <string name="order_shop_info_text_shop_total_price">本店合计：</string>
    <string name="btn_go_to_saunter">去逛逛</string>
    <string name="shop_label">商家:</string>
    <string name="shop_total">本店合计:</string>
    <string name="less_stock">仅剩%1$d件</string>
    <string name="save_text">节省:%1$d</string>
    <string name="out_stock">已下架</string>
    <string name="shopcart_title">购物车</string>

    <string name="shopcart_coupon_title">我的平台优惠券(与店铺优惠券叠加更优惠)</string>
    <string name="title_shopping_cart">购物车</string>
    <string name="title_shopping_empty">购物车还是空的</string>
    <string name="title_shopping_prompt">快去挑几件喜欢的宝贝吧~</string>
    <string name="title_shopping_cart_edit">编辑购物车</string>
    <string name="btn_to_shopping">去逛逛</string>
    <string name="btn_to_settle">去结算</string>
    <string name="btn_del_goods">删除</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_complete">完成</string>
    <string name="add_to_shopping_cart_success">宝贝已加入购物车</string>
    <string name="have_not_select_goods">没有选择任何商品</string>
    <string name="text_ajust_amount_success">修改商品数量成功</string>
    <string name="text_del_goods_success">删除商品成功</string>
    <string name="text_del_dialog_title">删除商品</string>
    <string name="text_del_dialog_info">确定要删除这件商品吗？</string>

    <string name="profile_purse">我的钱包</string>
    <string name="profile_over">我的余额</string>
    <string name="profile_financial_details">资金明细</string>
    <string name="profile_autonym">实名认证</string>
    <string name="profile_autonym_status_confirm">已认证</string>
    <string name="profile_autonym_status_deny">未认证</string>
    <string name="profile_recharge">充值</string>
    <string name="profile_extract_money">提现</string>
    <string name="profile_recharge_account">账户充值</string>
    <string name="profile_recharge_money">充值金额</string>
    <string name="profile_recharge_tips">注意：充值后余额只能用于消费，暂时无法提现</string>
    <string name="profile_recharge_money_empty">请输入充值金额</string>
    <string name="profile_recharge_money_small">充值金额需大于或等于1元</string>
    <string name="profile_recharge_money_max">充值金额不能大于1万元</string>
    <string name="profile_recharge_hint">输入充值金额</string>
    <string name="profile_autonym_status_info_title">认证信息</string>
    <string name="profile_autonym_status_info_tips">您已通过实名认证</string>
    <string name="profile_autonym_status_info_realname">真实姓名</string>
    <string name="profile_autonym_status_info_id">身份证号</string>
    <string name="account_security">账号与安全</string>
    <string name="login_password">登录密码</string>
    <string name="pay_password">支付密码</string>
    <string name="bound_phone">绑定手机</string>
    <string name="profile_tab_like_empty_tips">还没有喜欢的宝贝呢</string>
    <string name="profile_tab_attention_empty_tips">还没有关注的宝贝呢</string>
    <string name="profile_tab_share_empty_tips">还没有分享过宝贝哦</string>
    <string name="profile_tab_maga_empty_tips">还没有创建杂志</string>
    <string name="profile_text_me">我</string>
    <string name="profile_text_profile">个人主页</string>
    <string name="profile_text_coin_label">金币：</string>
    <string name="profile_text_coin_text">%1$s元</string>
    <string name="profile_text_coin_text_empty">0元 点击领取</string>
    <string name="profile_change_sell_model">切换至卖家模式</string>
    <string name="profile_my_coupons">优惠券</string>
    <string name="profile_my_attention">关注的杂志</string>
    <string name="profile_shop_attention">关注的商家</string>
    <string name="profile_signin">签到</string>
    <string name="profile_scan">扫一扫</string>
    <string name="profile_setting">设置</string>
    <string name="profile_have_buy">我买到的</string>
    <string name="profile_have_sell">我卖出的</string>
    <string name="profile_goods_manager">商品管理</string>
    <string name="profile_download_circel">下载微圈，专业开店</string>
    <string name="profile_update">更新</string>
    <string name="setting_more">基本设置</string>
    <string name="setting_person_info_setting">个人资料设置</string>
    <string name="setting_pwd_info_setting">修改账户密码</string>
    <string name="my_jingxiaoshang">掌柜账簿</string>
    <string name="my_account_info">账户信息</string>

    <string name="after_sale_service">售后服务</string>
    <string name="my_about">关于极客</string>
    <string name="my_suggestion">意见反馈</string>
    <string name="my_telephone">客服电话 400 069 0699（工作时间9：00&#8211;18：00）</string>
    <string name="left_customer">客户%1$d人</string>
    <string name="left_sales_total">销售总额%1$s元</string>
    <string name="left_income">总收入%1$s元</string>
    <string name="left_cash">可提现%1$s元</string>
    <string name="goto_buy">立即购买</string>
    <string name="add_shopping_cart">加入购物车</string>
    <string name="add_favor">收藏</string>
    <string name="support_service1">7天退货服务</string>
    <string name="support_service2">首单免费</string>
    <string name="support_service3">100%正品保证</string>


    <string name="address_empty_tips1">还没有收货地址哦</string>
    <string name="address_empty_tips2">快来加一个吧~</string>
    <string name="select_area_title">选择区域</string>
    <string name="province_area">省份：</string>
    <string name="city_area">城市：</string>
    <string name="district_area">区域：</string>


    <string name="stock">运费：%1$s元</string>

    <string name="sale">销量：%1$s件</string>
    <string name="favor">收藏：%1$s人</string>
    <string name="number">共%1$d件商品</string>
    <string name="tetecoin">可使用返还余额%1$s</string>
    <string name="moneybag">我的钱包  余额：%1$s元</string>

    <string name="weibosdk_app_url">www.geektmall.net/geektmall-upload/sources/app/apk/app-baidu-release.apk</string>
    <string name="weibosdk_share_webpage_template">【%1$s】（分享自 极客特购 %2$s）</string>
    <string name="version_update">版本更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="banding_setting">绑定设置</string>
    <string name="account_safe">账户与安全</string>

    <string name="share_weixin_friend">微信好友</string>
    <string name="share_title">选择分享方式</string>
    <string name="share_weixin_circle">微信朋友圈</string>
    <string name="share_qzone">Qzone</string>
    <string name="share_qq_friend">QQ好友</string>
    <string name="share_qq_weibo">腾讯微博</string>
    <string name="share_weibo">新浪微博</string>
    <string name="charge_note">每次在掌柜账簿进行提现时，提现金额的10%自动充值入“充值余额”。\n用户亦可通过微信支付和支付宝支付两种方式进行充值。\n“当前充值余额”可以用于商城所有商品购买。\n“当前充值余额”不能提现。</string>
    <string name="cash_note" formatted="false">提现说明：</string>
    <string name="cash_note1" formatted="false">提现金额的90%转入支付宝</string>
    <string name="cash_note2" formatted="false">提现金额的10%充值到</string>
    <string name="cash_note3" formatted="false">“我的余额”。</string>

    <string name="total_number">共%1$s件商品</string>
    <string name="notification">notification</string>
</resources>
