<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/goods_bg_toolbar"
    android:paddingLeft="10.0dip"
    android:layout_alignParentBottom="true"
    android:paddingRight="10.0dip">

    <TextView
        android:id="@+id/btn_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:drawableLeft="@drawable/like_gray"
        android:drawablePadding="5.0dip"
        android:gravity="center"
        android:text="@string/add_favor"
        android:textColor="@color/title_color"
        android:textSize="14.0sp" />
    <ImageButton
        android:id="@+id/to_shoppingcart_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/btn_like"
        android:background="@drawable/home_icon_cart_press"/>
    <TextView
        android:id="@+id/cart_number"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="15dp"
        android:layout_alignLeft="@id/to_shoppingcart_btn"
        android:layout_marginTop="15dp"
        android:singleLine="true"
        android:background="@drawable/red_ring_bg"
        android:gravity="center"
        android:text="0"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:visibility="visible"/>
    <Button
        android:id="@+id/btn_buy"
        android:textSize="14sp"
        android:textColor="@color/btn_pink_white_selector"
        android:background="@drawable/btn_pink_bg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="8.0dip"
        android:text="@string/goto_buy" />

    <Button
        android:id="@+id/btn_add_to_cart"
        android:textSize="14sp"
        android:textColor="@color/btn_white_pink_selector"
        android:background="@drawable/btn_white_pink_bg"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginRight="10.0dip"
        android:layout_toLeftOf="@id/btn_buy"
        android:padding="8.0dip"
        android:text="@string/add_shopping_cart" />
</RelativeLayout>